--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,13 @@
       <version>3.1.4</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <version>5.10.0</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
