--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,6 +32,8 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+    - uses: docker-practice/actions-setup-docker@master
+      timeout-minutes: 12
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: Check if SONAR_TOKEN exists
