--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,12 @@
       <version>3.1.4</version>
       <scope>test</scope>
     </dependency>
-
+    <dependency>
+      <groupId>io.zonky.test</groupId>
+      <artifactId>embedded-database-spring-test</artifactId>
+      <version>2.3.0</version>
+      <scope>test</scope>
+    </dependency>
 
   </dependencies>
 
