--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,13 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>com.fasterxml.jackson.datatype</groupId>
+      <artifactId>jackson-datatype-jsr310</artifactId>
+      <version>2.15.3</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
