--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,11 @@
       <version>2.15.3</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.springdoc</groupId>
+      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+      <version>2.2.0</version>
+    </dependency>
 
   </dependencies>
 
