--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.database.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/mydatabase
 spring.datasource.username=myuser
 spring.datasource.password=secret
+
+springdoc.swagger-ui.path=/api/swagger-ui.html
