--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -50,4 +50,6 @@ jobs:
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
       uses: advanced-security/maven-dependency-submission-action@v4.0.0
+      with:
+        directory: /home/runner/work/community-data-control
             
