--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -48,6 +48,8 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=apcyb-2025-team-3_community-data-control
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
+    - name: Debug section
+      run: ls /home/runner/work/community-data-control/community-data-control
     - name: Update dependency graph
       uses: advanced-security/maven-dependency-submission-action@v4.0.0
       with:
