--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -48,5 +48,10 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=apcyb-2025-team-3_community-data-control
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
+    - name: Set permissions for dependency graph update
+      run: chmod 755 /home/runner/work/community-data-control/community-data-control/mvnw
     - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+      uses: advanced-security/maven-dependency-submission-action@v4.0.0
+      with:
+        directory: /home/runner/work/community-data-control/community-data-control
+            
