--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,13 @@
       <version>2.2.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>4.3.1</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
