--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,13 @@
   <groupId>edu.spbu</groupId>
   <artifactId>community-data-control</artifactId>
   <version>0.0.2-SNAPSHOT</version>
-  <name>community-data-control</name>
+    <packaging>pom</packaging>
+    <name>community-data-control</name>
   <description>community-data-control</description>
-  <properties>
+    <modules>
+        <module>commons</module>
+    </modules>
+    <properties>
     <java.version>17</java.version>
   </properties>
   <dependencies>
