Event handling now in separate microservice, microservices for group and mentorship management merged

--- a/event-service/src/main/resources/application.properties
+++ b/event-service/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-spring.application.name=mentorship-service
+spring.application.name=event-service
 spring.jpa.database=POSTGRESQL
 spring.jpa.hibernate.ddl-auto=create-drop
-
 spring.database.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/mydatabase
 spring.datasource.username=myuser
 spring.datasource.password=secret
+
+server.port=5001
