--- a/group-service/pom.xml
+++ b/group-service/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>edu.spbu.datacontrol</groupId>
     <artifactId>group-service</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>${parent.version}</version>
     <name>group-service</name>
     <description>group-service</description>
     <properties>
@@ -115,12 +115,12 @@
         <dependency>
             <groupId>edu.spbu.datacontrol</groupId>
             <artifactId>commons</artifactId>
-            <version>0.0.2-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>edu.spbu.datacontrol</groupId>
             <artifactId>user-service</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
 
     </dependencies>
