Added simple UserClient

--- a/group-service/src/main/resources/application.properties
+++ b/group-service/src/main/resources/application.properties
@@ -6,4 +6,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/mydatabase
 spring.datasource.username=myuser
 spring.datasource.password=secret
 
+user.service.url=localhost:5002
 event.service.url=localhost:5001
+
+server.port=5003
