--- a/web/cdc/Dockerfile
+++ b/web/cdc/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:22 as build-deps
 WORKDIR /usr/app
-COPY package.json package-lock.json ./
+COPY package.json package-lock.json .env.production ./
 COPY ./public ./public
 COPY ./src ./src
 RUN npm install --production && npm run build
@@ -8,4 +8,6 @@ RUN npm install --production && npm run build
 FROM nginx:1.26.0
 COPY --from=build-deps /usr/app/build /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY env.sh /docker-entrypoint.d/env.sh
+RUN chmod +x /docker-entrypoint.d/env.sh
 EXPOSE 80
