--- a/deploy/postgres-deployment.yaml
+++ b/deploy/postgres-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: postgres
+  namespace: datacontrol
   labels:
     app: postgres
 spec:
@@ -15,6 +16,9 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: postgres-app
+  namespace: datacontrol
+  labels:
+    app: postgres-app
 spec:
   selector:
     matchLabels:
@@ -24,6 +28,7 @@ spec:
   minReadySeconds: 10 # by default is 0
   template:
     metadata:
+      namespace: datacontrol
       labels:
         app: postgres-app # has to match .spec.selector.matchLabels
     spec:
