--- a/web/cdc/Dockerfile
+++ b/web/cdc/Dockerfile
@@ -1,12 +1,14 @@
-FROM node:20
+FROM node:20 as build-deps
 WORKDIR /usr/app
 COPY package.json package-lock.json ./
 COPY .env.production .env
 COPY ./public ./public
 COPY ./src ./src
+RUN npm install --production && npm run build
 
-RUN npm install --production && npm run build && npm install serve -g
-COPY env.sh ./
-COPY entrypoint.sh ./
-
-ENTRYPOINT ["./entrypoint.sh"]
+FROM nginx:1.26.0
+COPY --from=build-deps /usr/app/build /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY env.sh /docker-entrypoint.d/env.sh
+RUN chmod +x /docker-entrypoint.d/env.sh
+EXPOSE 80
