--- a/event-service/src/main/resources/application.properties
+++ b/event-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=event-service
 spring.jpa.database=POSTGRESQL
 spring.database.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://postgres:5432/database
+spring.datasource.url=jdbc:postgresql://localhost:5432/mydatabase
 spring.datasource.username=myuser
 spring.datasource.password=secret
 
