Security setting for tests fixed

--- a/user-service/src/test/resources/application.properties
+++ b/user-service/src/test/resources/application.properties
@@ -3,3 +3,4 @@ spring.jpa.database=POSTGRESQL
 spring.database.driverClassName=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
 event.service.url=localhost:5001
+frontend.url=http://localhost:3000
