--- a/group-service/src/main/resources/application.properties
+++ b/group-service/src/main/resources/application.properties
@@ -1,12 +1,18 @@
 spring.application.name=group-service
 spring.jpa.database=POSTGRESQL
-spring.jpa.hibernate.ddl-auto=create-drop
 spring.database.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/mydatabase
+spring.datasource.url=jdbc:postgresql://postgres:5432/database
 spring.datasource.username=myuser
 spring.datasource.password=secret
 
 user.service.url=localhost:5002
 event.service.url=localhost:5001
+frontend.url=http://localhost:3000
 
 server.port=5003
+
+spring.devtools.livereload.port=35730
+spring.security.oauth2.client.registration.github.client-id=Ov23ctQnsqB3lpRUyEJf
+spring.security.oauth2.client.registration.google.client-id=206278170166-f2emadmmrigoe9rni284vikd1vo3t1k6.apps.googleusercontent.com
+spring.security.oauth2.client.registration.github.client-secret=902ad4e7133fd188e0420d54fb45b52de8a34648
+spring.security.oauth2.client.registration.google.client-secret=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
