--- a/compose.yaml
+++ b/compose.yaml
@@ -20,6 +20,12 @@ services:
     volumes:
       - pgadmin-data:/var/lib/pgadmin
 
+  redis:
+    image: redis:latest
+    ports:
+      - 6379:6379
+    restart: always
+
 volumes:
   local_pgdata:
   pgadmin-data:
