--- a/group-service/src/main/resources/application.properties
+++ b/group-service/src/main/resources/application.properties
@@ -18,3 +18,8 @@ spring.security.oauth2.client.registration.github.client-secret=902ad4e7133fd188
 spring.security.oauth2.client.registration.google.client-secret=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
 
 logging.level.org.springframework.security=DEBUG
+
+spring.redis.host=redis
+spring.redis.port=6379
+
+
