--- a/group-service/pom.xml
+++ b/group-service/pom.xml
@@ -8,9 +8,9 @@
         <version>0.0.2-SNAPSHOT</version>
     </parent>
     <groupId>edu.spbu.datacontrol</groupId>
-    <artifactId>group-service</artifactId>
+    <artifactId>groupservice</artifactId>
     <version>${parent.version}</version>
-    <name>group-service</name>
+    <name>groupservice</name>
     <description>group-service</description>
     <properties>
         <java.version>17</java.version>
